🔨feat(Layout): fix to keep Footer at the bottom of the viewport - was broken when wrapping App with Rainbowkit

--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,4 @@ html,
 body,
 #__next {
   height: 100%;
-  background-color: black;
 }
